--- a/ex1/deployment.yaml
+++ b/ex1/deployment.yaml
@@ -1,3 +1,32 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: my-website-config
+  namespace: student-apps
+data:
+  index.html: |
+    <!DOCTYPE html>
+    <html>
+    <head><title>GitOps Demo</title></head>
+    <body style="background-color: #2d3436; color: white; text-align: center; padding-top: 50px;">
+      <h1>Michael is the man!</h1>
+      <p>Deployed via ArgoCD</p>
+    </body>
+    </html>
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: argo-service
+spec:
+  selector:
+    name: nginx
+  type: NodePort
+  ports:
+  - name: service1
+    port: 80
+    targetPort: 80
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
