--- a/ex1/deployment.yaml
+++ b/ex1/deployment.yaml
@@ -18,13 +18,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: argo-service
+  namespace: student-apps
 spec:
   selector:
-    name: nginx
+    app: nginx-site
   type: NodePort
   ports:
-  - name: service1
-    port: 80
+  - port: 80
     targetPort: 80
 ---
 apiVersion: apps/v1
@@ -32,7 +32,7 @@ kind: Deployment
 metadata:
   name: nginx-site
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: nginx-site
