--- a/ex1/deployment.yaml
+++ b/ex1/deployment.yaml
@@ -20,17 +20,19 @@ metadata:
   name: argo-service
   namespace: student-apps
 spec:
+  type: NodePort
   selector:
     app: nginx-site
-  type: NodePort
   ports:
-  - port: 80
-    targetPort: 80
+    - name: http
+      port: 80
+      targetPort: 80
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-site
+  namespace: student-apps
 spec:
   replicas: 1
   selector:
@@ -44,3 +46,12 @@ spec:
       containers:
         - name: nginx
           image: nginx:stable-alpine
+          ports:
+            - containerPort: 80
+          volumeMounts:
+            - name: website-content
+              mountPath: /usr/share/nginx/html
+      volumes:
+        - name: website-content
+          configMap:
+            name: my-website-config
